// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cannot overwrite loop variables within a block 1`] = `
Object {
  "alertResult": undefined,
  "code": "function test(){
    let z = [];
    for (let x = 0; x < 2; x = x + 1) {
      x = 1;
    }
    return false;
}
test();",
  "displayResult": undefined,
  "error": "Line 4: Cannot assign new value to constant x",
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing temporal dead zone 1`] = `
Object {
  "alertResult": undefined,
  "code": "const a = 1;
function f() {
  display(a);
  const a = 5;
}
f();",
  "displayResult": undefined,
  "error": "Line 3: Name a not yet assigned",
  "visualiseListResult": undefined,
}
`;

exports[`In a block, every going-to-be-defined variable in the block cannot be accessed until it has been defined in the block. 1`] = `
Object {
  "alertResult": undefined,
  "code": "const a = 1;
{
  a + a;
  const a = 10;
}",
  "displayResult": undefined,
  "error": "Line 3: Name a not yet assigned",
  "visualiseListResult": undefined,
}
`;

exports[`No hoisting of functions. Only the name is hoisted like let and const 1`] = `
Object {
  "alertResult": undefined,
  "code": "const v = f();
function f() {
  return 1;
}
v;",
  "displayResult": undefined,
  "error": "Line 1: Name f not yet assigned",
  "visualiseListResult": undefined,
}
`;

exports[`Shadowed variables may not be assigned to until declared in the current scope 1`] = `
Object {
  "alertResult": undefined,
  "code": "let variable = 1;
function test(){
  variable = 100;
  let variable = true;
  return variable;
}
test();",
  "displayResult": undefined,
  "error": "Line 3: Name variable not declared",
  "visualiseListResult": undefined,
}
`;

exports[`const uses block scoping instead of function scoping 1`] = `
Object {
  "alertResult": undefined,
  "code": "function test(){
  const x = true;
  if(true) {
      const x = false;
  } else {
      const x = false;
  }
  return x;
}
test();",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`for loop \`let\` variables are copied into the block scope 1`] = `
Object {
  "alertResult": undefined,
  "code": "function test(){
  let z = [];
  for (let x = 0; x < 10; x = x + 1) {
    z[x] = () => x;
  }
  return z[1]();
}
test();",
  "displayResult": undefined,
  "result": 1,
  "visualiseListResult": undefined,
}
`;

exports[`for loops use block scoping instead of function scoping 1`] = `
Object {
  "alertResult": undefined,
  "code": "function test(){
  let x = true;
  for (let x = 1; x > 0; x = x - 1) {
  }
  return x;
}
test();",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`let uses block scoping instead of function scoping 1`] = `
Object {
  "alertResult": undefined,
  "code": "function test(){
  let x = true;
  if(true) {
      let x = false;
  } else {
      let x = false;
  }
  return x;
}
test();",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`standalone block statements 1`] = `
Object {
  "alertResult": undefined,
  "code": "function test(){
  const x = true;
  {
      const x = false;
  }
  return x;
}
test();",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`while loops use block scoping instead of function scoping 1`] = `
Object {
  "alertResult": undefined,
  "code": "function test(){
  let x = true;
  while (true) {
    let x = false;
    break;
  }
  return x;
}
test();",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;
